--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
         <meta property="og:url" content="">
         <meta property="og:image" content="">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">   
         <link
             rel="stylesheet"
             href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css"
@@ -38,19 +39,21 @@
             </header>
             <aside class="places__gallery">
                 <div class="gallery__search">
-                    <input
-                        class="gallery__search-query"
-                        type="text"
-                        name="search"
-                        data-type="fulltext"
-                        placeholder="Serach..."
-                    />
-                    <button class="gallery__search-button">
-                      <i class="im im-magnifier"></i>
-                    </button>
-                    <button class="gallery__search-keywords-button">
-                        <i class="im im-tag"></i>
-                    </button>
+                    <div class="gallery__search-wrapper">
+                        <input
+                            class="gallery__search-query"
+                            type="text"
+                            name="search"
+                            data-type="fulltext"
+                            placeholder="Serach..."
+                        />
+                        <button class="gallery__search-button">
+                        <i class="im im-magnifier"></i>
+                        </button>
+                        <button class="gallery__search-keywords-button">
+                            <i class="im im-tag"></i>
+                        </button>
+                    </div>
                 </div>
                 <div class="gallery__buttons">
                     <button class="gallery_search-only-open">Open Now</button>
@@ -59,57 +62,38 @@
                     </button>
                 </div>
                 <div class="gallery__locations-list">
-                    <div
-                        class="gallery__location-item"
-                        data-location-id=""
-                        data-location-lon=""
-                        data-location-lat=""
-                    >
-                        <div class="gallery__location-item-name">
-                            Lamia Office
-                        </div>
-                        <div class="gallery__location-item-description">
-                            My future workplace! ^^
-                        </div>
-                        <div class="gallery__location-item-footer">
-                            <div class="gallery__location-item-hours">
-                                08:00-18:00
-                            </div>
-                            <div
-                                class="gallery__location-item-favourite"
-                                data-favourite="true"
-                            >
-                                <i class="im im-star"></i>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
             </aside>
 
             <aside class="location-item-full-view">
                 <button class="location-item-full-view__close"><i class="im im-x-mark"></i></button>
-                <div class="location-item-full-view__name">
-                    Lamia Office
-                </div>
-                <div class="location-item-full-view__description">
-                    Lamia on digitaalisen kasvun kumppani. Olemme liiketoiminnan kehittäjiä, digitaalisen kaupankäynnin asiantuntijoita ja teknologioiden edelläkävijöitä. Asiakkaamme luottavat meihin, koska tuotamme kestävää ja mitattavaa arvoa designin, ohjelmistokehityksen, pilven ja datan keinoin.
-                </div>
-                <div class="location-item-full-view__footer">
-                    <div class="location-item-full-view__hours">    
-                        <div class="location-item-full-view__opening-hour">08:00</div>
-                        <div class="location-item-full-view__hour-separator">-</div>
-                        <div class="location-item-full-view__closing-hour">18:00</div>
+                <div class="location-item-full-view__item-wrapper">
+                    <div class="location-item-full-view__name">
+                        Lamia Office
                     </div>
-                    <div class="location-item-full-view__keywords">
-                        <div class="location-item-full-view__keyword">Work</div>
+                    <div class="location-item-full-view__description">
+                        Lamia on digitaalisen kasvun kumppani. Olemme liiketoiminnan kehittäjiä, digitaalisen kaupankäynnin asiantuntijoita ja teknologioiden edelläkävijöitä. Asiakkaamme luottavat meihin, koska tuotamme kestävää ja mitattavaa arvoa designin, ohjelmistokehityksen, pilven ja datan keinoin.
                     </div>
-                    <div
-                        class="location-item-full-view__favourite"
-                        data-favourite="true"
-                    >
-                        <i class="im im-star"></i>
+                    <div class="location-item-full-view__footer">
+                        <div class="location-item-full-view__hours">    
+                            <div class="location-item-full-view__opening-hour">08:00</div>
+                            <div class="location-item-full-view__hour-separator">-</div>
+                            <div class="location-item-full-view__closing-hour">18:00</div>
+                        </div>
+                        <div class="location-item-full-view__keywords">
+                            <div class="location-item-full-view__keyword">Work</div>
+                        </div>
+                        <div
+                            class="location-item-full-view__favourite"
+                            data-favourite="true"
+                        >
+                            <i class="im im-star"></i>
+                        </div>
                     </div>
                 </div>
+                <button class="button__location-item-full-view__submit">Edit
+                </button>
             </aside>
             <aside class="location-item-submission-view">
                 <button class="location-item-submission-view__close"><i class="im im-x-mark"></i></button>
