FullView container now uses dynamic content when it opens (with mock data)

--- a/public/index.html
+++ b/public/index.html
@@ -66,35 +66,7 @@
                 </div>
             </aside>
 
-            <aside class="location-item-full-view">
-                <button class="location-item-full-view__close"><i class="im im-x-mark"></i></button>
-                <div class="location-item-full-view__item-wrapper">
-                    <div class="location-item-full-view__name">
-                        Lamia Office
-                    </div>
-                    <div class="location-item-full-view__description">
-                        Lamia on digitaalisen kasvun kumppani. Olemme liiketoiminnan kehittäjiä, digitaalisen kaupankäynnin asiantuntijoita ja teknologioiden edelläkävijöitä. Asiakkaamme luottavat meihin, koska tuotamme kestävää ja mitattavaa arvoa designin, ohjelmistokehityksen, pilven ja datan keinoin.
-                    </div>
-                    <div class="location-item-full-view__footer">
-                        <div class="location-item-full-view__hours">    
-                            <div class="location-item-full-view__opening-hour">08:00</div>
-                            <div class="location-item-full-view__hour-separator">-</div>
-                            <div class="location-item-full-view__closing-hour">18:00</div>
-                        </div>
-                        <div class="location-item-full-view__keywords">
-                            <div class="location-item-full-view__keyword">Work</div>
-                        </div>
-                        <div
-                            class="location-item-full-view__favourite"
-                            data-favourite="true"
-                        >
-                            <i class="im im-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <button class="button__location-item-full-view__submit">Edit
-                </button>
-            </aside>
+            <aside class="location-item-full-view"></aside>
             <aside class="location-item-submission-view">
                 <button class="location-item-submission-view__close"><i class="im im-x-mark"></i></button>
                 <h2>Add new place:</h2>
