Added wrapper for location item full view to handle navigation properly

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,10 @@
                 </div>
             </aside>
 
-            <aside class="location-item-full-view"></aside>
+            <aside class="location-item-full-view">
+                <button class="location-item-full-view__close" type="button"><i class="im im-x-mark"></i></button>
+                <div class="location-item-full-view__wrapper"></div>
+            </aside>
             <aside class="location-item-submission-view">
                 <button class="location-item-submission-view__close"><i class="im im-x-mark"></i></button>
                 <h2>Add new place:</h2>
