--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
         <title>Places - Collect your favourite places!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta title="Places - Collect your favourite places!" />
-        <meta property="og:title" content="">
-        <meta property="og:type" content="">
-        <meta property="og:url" content="">
-        <meta property="og:image" content="">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <meta property="og:title" content="Places - Collect your favourite places">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://lamia-application.web.app/">
+        <meta property="og:image" content="og_image.png">
+        <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%23db4b73%22></rect><path fill=%22%23fff%22 d=%22%22></path></svg>" />        <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">   
         <link
