Split gallery code into locationItem components

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,9 @@
                     </div>
                 </div>
                 <div class="gallery__buttons">
-                    <button class="gallery_search-only-open">Open Now</button>
+                    <button class="gallery_search-only-open">
+                        Open Now
+                    </button>
                     <button class="gallery_search-only-favourites">
                         Favourites
                     </button>
@@ -72,12 +74,8 @@
             </aside>
             <aside class="location-item-submission-view">
                 <button class="location-item-submission-view__close"><i class="im im-x-mark"></i></button>
-                <h2>Add new place:</h2>
-                <input type="text" name="name" placeholder="Name" class="" />
-                <textarea name="description" rows="5" placeholder="Description" class=""></textarea>
-                <input type="time" name="opening-hour" placeholder="Opening Hour" class="" />
-                <input type="time" name="closing-hour" placeholder="Closing Hour" class="" />
-                <button class="button__location-item-submission-view__submit">Add</div>
+                <div class="location-item-submission-view__wrapper">
+                </div>
             </aside>
             <aside class="location-item-edit-view">                
                 <button class="location-item-edit-view__close"><i class="im im-x-mark"></i></button>
